--- a/app/index.html
+++ b/app/index.html
@@ -456,7 +456,9 @@
         </form>
     </div>
 
+    <script src="libs/svg4everybody/svg4everybody.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <script>svg4everybody();</script>
 </body>
 </html>
